[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timestampblocks_spanring"
version = "0.0.1"
authors = [
  { name="Christof Spanring", email="mail@christofspanring.com" },
]
description = "A timestamp block management tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pw3d/tsb"
"Bug Tracker" = "https://github.com/pw3d/tsb/issues"
